# gsf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  HISTORY.rst  LICENSE  README.rst  RELEASE_NOTES_v2.0.0.md  Untitled.ipynb  environment.yml  environment_linux.yml  gsf_environment.yml  gsf_environment_linux.yml  pyproject.toml  requirements.txt  requirements_py3.9.txt  setup.py  tox.ini
config/: config.yaml
docs/: conf.py  corner.rst  default.profraw  example.rst  fitting.rst  gsf.Logger.rst  index.rst  input.rst  output.rst  overview.rst  parameters.rst  requirements.txt  templates.rst
example/: 00003_PA00_sed.fits  43114_PA00_inp0_moffat_err.cat  43114_PA00_sed.fits  Fit with taumodel.ipynb  Full spectral fitting.ipynb  GDS_bb_ksirac_uvis.cat  NIRISS Full spectral fitting.ipynb  Plot SFH and SED.ipynb  SFH_00003_PA00.fits  SFH_00003_PA00_param.fits  SFH_43114_PA00.fits  SFH_43114_PA00_param.fits  chain_00003_PA00_corner.cpkl  chain_43114_PA00_corner.cpkl  default.profraw  gds_43114.input  get_configfile.py  get_templates_mp.py  gsf.input  gsf_del.input  gsf_spec_00003.fits  gsf_spec_43114.fits  l3_nis_G150C_s00003_1d_cont_fnu.txt  l3_nis_flux.cat  run_fit_mp.py  run_gsf.py  summary_00003_PA00.fits  summary_43114_PA00.fits  table_00003_PA00_lines.txt  table_43114_PA00_lines.txt
gsf/: __init__.py  basic_func.py  class_plot.py  corner.py  fitting.py  function.py  function_class.py  function_igm.py  get_configfile.py  gsf.py  img_scale.py  maketmp_filt.py  maketmp_z0.py  maketmp_z0_bu.py  maketmp_z0_tau.py  zfit.py  (+16 more)
gsf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+687 files in other folders)
